# V1PROGDEMO

./: .gitignore  Cargo.toml  DEPLOYMENT.md  QUICK_DEPLOY.md  README.md  RENDER_DEPLOY.md  deploy-render.sh  render.yaml
migrations/: 001_initial_schema.sql
src/: auth.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  scoring.rs
